# xi-example-frontend

./: Cargo.toml  README.md  local-termcaps
docs/: planning.rst
src/: core.rs  events.rs  main.rs  rpc.rs
src/base/: mod.rs
src/depends/: logging.rs  mod.rs
src/exports/: mod.rs
src/future/: blocking.rs  mod.rs  raw_fd.rs
src/futures/: blocking.rs
src/newterm/: io.rs  mod.rs
src/term/: controller.rs  io.rs  layout.rs  mod.rs  screen.rs  sharedlock.rs  window.rs
src/term/components/: mod.rs
src/term/io/: mod.rs  raw.rs  util.rs
src/ui/: controller.rs  mod.rs
