[package]
name = "xi-edit"
version = "0.1.0"
authors = ["Sean Wilson <sean.wilson@ghs.com>"]
edition = "2018"

[dependencies]

# Basic depends
failure = "0.1.5"
lazy_static = "1.3.0"
futures = "0.3.1"

# Logging Depends
chrono = "0.4.6"
log = "0.4.6"
fern = "0.5.7"

# Term UI depends
termion = "1.5.1"

# Serialization depends
serde = "1.0.89"
serde_derive = "1.0"
serde_json = "1.0"

# Configuration depends
toml = "0.5.0"
dirs = "1.0.5"


[dependencies.xi-core-lib]
branch = "master"
git = "https://github.com/xi-editor/xi-editor"

[dependencies.xi-rpc]
branch = "master"
git = "https://github.com/xi-editor/xi-editor"

[dependencies.xi-trace]
branch = "master"
git = "https://github.com/xi-editor/xi-editor"
features = ["chrome_trace_event"]
optional = true

[dependencies.tokio]
version = "0.2.9"
features = ["sync"]