[package]
name = "gui"
version = "0.1.0"
authors = ["Sean Wilson <sean.wilson@ghs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.1.4"
futures = "0.3.1"
failure = "0.1.6"
term = "0.6.1"
unicode-segmentation = "1.6.0"

[dependencies.xi-rope]
version = "0.3.0"

[dependencies.tokio]
version = "0.2.9"
features = ["full"]

[dependencies.libc]
version = "0.2"

[dependencies.signal-hook]
version = "0.1.13"
